# grrs

./: .tagpr  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lint.yml  release.yml  tagpr.yml
src/: lib.rs  main.rs
tests/: cli.rs
