[package]
name = "takaiyuk-grrs"
version = "0.1.10"
edition = "2021"
authors = ["tishikawa"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/takaiyuk/grrs"
repository = "https://github.com/takaiyuk/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.11", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
env_logger = "0.10.1"
log = "0.4.20"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
